@@ -25,6 +25,8 @@ Broker:
 - Don't save $SYS messages to the on-disk persistent db. All $SYS messages
   should be reconstructed on a restart. This means bridge connection
   notifications will now be correct on a restart.
+- Fix reloading of bridge clients from the persistent db. This means that
+  outgoing bridged topics should always work.
 
 Client library:
 
